--- a/jquery2.html
+++ b/jquery2.html
@@ -4,7 +4,7 @@
 	<title></title>
 	<script src="http://code.jquery.com/jquery-3.1.0.min.js" type="text/javascript"></script>
 	<link href="" type="text/css" rel="stylesheet"></link>
-	<script lang="javascript">]
+	<script lang="javascript">
 			//we're going to insert 3 rows and 3 columns of data into a html table with jquery here
 		$().ready(function() {
 				// init statements go here
@@ -13,7 +13,8 @@
 				var tableRow3 = "<tr><td>4</td><td>9</td><td>2</td></tr>"
 					// creating these variables is a clean way to format the html for tbody than entering in each row with tags
 				$("tbody").append(tableRow1).append(tableRow2).append(tableRow3);
-					// the append command lets us add anything we want to the tbody tag 
+					// the append command lets us add anything we want to the tbody tag, here it adds each row
+					
 			});
 	</script>
 	<style></style>
