created select-option.html and template

--- a/template.html
+++ b/template.html
@@ -4,9 +4,13 @@
 	<title></title>
 	<script src="http://code.jquery.com/jquery-3.1.0.min.js" type="text/javascript"></script> 
 	<link href="" type="text/css" rel="stylesheet"></link>
-	<script lang="javascript"></script>
+	<script lang="javascript">
+		$().ready(function() {
+					});
+	</script>
 	<style></style>
 </head>
 <body>
+
 </body>
 </html>
