--- a/allFormControls.html
+++ b/allFormControls.html
@@ -59,7 +59,19 @@
 	<input type="checkbox" id="java" value="Java">I know Java</input>
 	<p>I know C#.net <label id="lblcs"></label></p>
 	<p>I know Java <label id="lbljava"></label></p> <!-- messages in the labels pertaining to the two options -->
-
 	</div>
+	<!-- TEXT AREA -->
+	<div>
+	<textarea id="ta" rows="5" cols="72"></textarea>
+	<p><label id="taDisplay"></label></p>
+	</div>
+	<div>
+	<!-- INPUT TYPES -->
+	<input type="text" readonly /> <!-- prevents users from entering data-->
+	<input type="text" disabled /> <!-- text is greyed out and wont be accessible to user -->
+	<input type="text" size="50" /> <!-- specifies how many characters you want VISIBLE IN THE INPUT BOX, past that it begins scrolling -->
+	<input type="text" maxlength="30" /> <!--controls how many characters can be entered, wont accept mor e
+
+
 </body>
 </html>
