--- a/template.html
+++ b/template.html
@@ -3,7 +3,7 @@
 <head>
 	<title></title>
 	<script src="http://code.jquery.com/jquery-3.1.0.min.js" type="text/javascript"></script> 
-	<link href="" type="text/css" rel="stylesheet"></link>
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" rel="styleshee" type="text/css" rel="stylesheet"></link>
 	<script lang="javascript">
 		$().ready(function() {
 					});
